@@ -45,7 +45,10 @@ API Changes
 
 ======================= Lucene 3.x (not yet released) =======================
 
-(No changes)
+Bug fixes
+
+ * LUCENE-3026: SmartChineseAnalyzer's WordTokenFilter threw NullPointerException
+   on sentences longer than 32,767 characters.  (wangzhenghang via Robert Muir)
 
 ======================= Lucene 3.1.0 =======================
 
